# qt5clip

./: CMakeLists.txt  appveyor.yml  getclip.cpp
